<resources xmlns:tools="http://schemas.android.com/tools"
	xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_desc">"Simple, powerful, open-source SSH client."</string>
	<string name="service_desc">"Maintains SSH connections and loaded pubkeys"</string>
	<string name="app_copyright">Copyright &#xA9; Kenny Root</string>
	<string name="title_pubkey_list">"Pubkeys"</string>
	<string name="title_port_forwards_list">"Port forwards"</string>
	<string name="title_help">"Help"</string>
	<string name="title_eula">License</string>
	<string name="title_colors">"Colors"</string>
	<string name="title_color_picker">"Pick a color"</string>
	<string name="title_settings">Settings</string>
	<string name="title_pubkey_generate">Generate</string>
	<string name="terms_and_conditions">"Terms &amp; Conditions"</string>
	<string name="hints">"Hints"</string>
	<string name="keyboard_shortcuts">"Keyboard Shortcuts"</string>
	<string name="increase_font_size">"Increase Font Size"</string>
	<string name="increase_font_shortcut">Ctrl and +</string>
	<string name="decrease_font_size">"Decrease Font Size"</string>
	<string name="decrease_font_shortcut">Ctrl and -</string>
	<string name="paste_shortcut">Ctrl-Shift-V</string>
	<string name="pubkey_generate">"Generate"</string>
	<string name="pubkey_delete">"Delete key"</string>
	<string name="pubkey_gather_entropy">"Gathering Entropy"</string>
	<string name="pubkey_touch_prompt">"Touch this box to gather randomness: %1$d%% done"</string>
	<string name="pubkey_touch_hint">"In order to assure randomness during the key generation, move your finger randomly over the box below."</string>
	<string name="pubkey_generating">"Generating key pair…"</string>
	<string name="pubkey_generate_failed">"Key generation failed"</string>
	<string name="pubkey_copy_private">"Copy private key"</string>
	<string name="pubkey_copy_private_openssh">"Copy private key (OpenSSH)"</string>
	<string name="pubkey_copy_private_pem">"Copy private key (PEM)"</string>
	<string name="pubkey_copy_private_encrypted">"Copy private key (encrypted)"</string>
	<string name="pubkey_copy_public">"Copy public key"</string>
	<string name="pubkey_export_public">"Export public key"</string>
	<string name="pubkey_export_private">"Export private key"</string>
	<string name="pubkey_export_private_openssh">"Export private key (OpenSSH)"</string>
	<string name="pubkey_export_private_pem">"Export private key (PEM)"</string>
	<string name="pubkey_export_private_encrypted">"Export private key (encrypted)"</string>
	<string name="pubkey_export_set_passphrase">"Set export passphrase"</string>
	<string name="pubkey_export_passphrase_message">"Enter a passphrase to encrypt the exported key"</string>
	<string name="pubkey_export_confirm_passphrase">"Confirm passphrase"</string>
	<string name="pubkey_export_passphrase_mismatch">"Passphrases do not match"</string>
	<string name="pubkey_import_encrypted_title">"Import encrypted key"</string>
	<string name="pubkey_import_encrypted_message">"Enter password to decrypt key '%1$s' (%2$s)"</string>
	<string name="pubkey_import_button">"Import"</string>
	<string name="pubkey_import_encrypt_key">"Encrypt key for storage"</string>
	<string name="pubkey_import_reuse_password">"Use same password for encryption"</string>
	<string name="pubkey_import_new_password">"New password"</string>
	<string name="pubkey_import_confirm_password">"Confirm password"</string>
	<string name="pubkey_list_empty">"Tap \"Menu\" to create"\n"or import key pairs."</string>
	<string name="pubkey_unknown_format">"Unknown format"</string>
	<string name="pubkey_change_password">"Change password"</string>
	<string name="pubkey_unlock">"Unlock key"</string>
	<string name="pubkey_unlock_message">"Enter password to unlock key '%1$s'"</string>
	<string name="pubkey_nickname_exists">"A key with this nickname already exists"</string>
	<string name="pubkey_load_on_start">"Load key on start"</string>
	<string name="pubkey_confirm_use">"Confirm before use"</string>
	<string name="portforward_edit">"Edit port forward"</string>
	<string name="portforward_delete">"Delete port forward"</string>
	<string name="prompt_nickname">"Nickname:"</string>
	<string name="prompt_source_port">"Source port:"</string>
	<string name="prompt_destination">"Destination:"</string>
	<string name="prompt_old_password">"Old password:"</string>
	<string name="prompt_username">"Username:"</string>
	<string name="prompt_password">"Password:"</string>
	<string name="prompt_again">"(again)"</string>
	<string name="prompt_type">"Type:"</string>
	<string name="prompt_password_can_be_blank">"Note: password can be blank"</string>
	<string name="prompt_bits">"Bits:"</string>
	<string name="prompt_pubkey_password">"Password for key '%1$s'"</string>
	<string name="prompt_allow_agent_to_use_key">"Allow remote host to"\n"use key '%1$s'?"</string>
	<string name="host_verification_failure_warning_header">"WARNING: REMOTE HOST IDENTIFICATION HAS CHANGED!"</string>
	<string name="host_verification_failure_warning">"IT IS POSSIBLE THAT SOMEONE IS DOING SOMETHING NASTY!"\n"Someone could be eavesdropping on you right now (man-in-the-middle attack)!"\n"It is also possible that the host key has just been changed."</string>
	<string name="prompt_host_disconnected">"Host has disconnected."\n"Close session?"</string>
	<string name="prompt_continue_connecting">"Are you sure you want to continue connecting?"</string>
	<string name="host_authenticity_warning">"The authenticity of host '%1$s' can't be established."</string>
	<string name="host_fingerprint">"Host %1$s key fingerprint is %2$s"</string>
	<string name="host_key_verification_title">Host key verification</string>
	<string name="fingerprint_format_header">Fingerprint format</string>
	<string name="host_key_type_and_size">%1$s %2$d bits</string>
	<string name="fingerprint_copy_description">Copy fingerprint to clipboard</string>
	<string name="alert_passwords_do_not_match_msg">"Passwords do not match!"</string>
	<string name="alert_wrong_password_msg">"Wrong password!"</string>
	<string name="button_resize">"Resize"</string>
	<string name="alert_disconnect_msg">"Connection Lost"</string>
	<string name="console_session_ended">"Session ended"</string>
	<string name="disconnect_reason_remote_eof">"The remote host closed the connection"</string>
	<string name="disconnect_reason_io_error">"The connection was interrupted"</string>
	<string name="disconnect_reason_network_lost">"The network connection was lost"</string>
	<string name="disconnect_reason_host_unresolved">"The hostname could not be resolved"</string>
	<string name="disconnect_reason_network_unreachable">"The network or host is unreachable. Check your internet connection."</string>
	<string name="disconnect_reason_auth_fail">"Authentication failed"</string>
	<string name="console_connecting_status">"Connecting to %1$s…"</string>
	<string name="console_reconnecting_status">"Reconnecting to %1$s… (attempt %2$d)"</string>
	<string name="network_lost_grace_period">"Network lost, waiting to reconnect…"</string>
	<string name="network_grace_period_expired">"Network not restored, disconnecting…"</string>
	<string name="pref_emulation_category">"Terminal emulation"</string>
	<string name="pref_emulation_title">"Emulation mode"</string>
	<string name="pref_scrollback_title">"Scrollback size"</string>
	<string name="pref_scrollback_summary">"Size of scrollback buffer to keep in memory for each console"</string>
	<string name="pref_backupkeys_title">Backup pubkeys</string>
	<string name="pref_backupkeys_summary">Keep back-ups of the private keys using Android\'s backup mechanism</string>
	<string name="pref_ui_category">"User interface"</string>
	<string name="pref_rotation_title">"Rotation mode"</string>
	<string name="pref_titlebarhide_title">"Autohide title bar"</string>
	<string name="pref_titlebarhide_summary">"Tap console to show title bar and access menu"</string>
	<string name="pref_alwaysvisible_title">Special keys always visible</string>
	<string name="pref_pg_updn_gesture_title">"Page up/down gesture"</string>
	<string name="pref_pg_updn_gesture_summary">"Swipe the left third of the screen to send pg up/dn to the terminal"</string>
	<string name="pref_fullscreen_title">"Full screen"</string>
	<string name="pref_fullscreen_summary">"Hide status bar while in console"</string>
	<string name="pref_keyboard_category">"Keyboard"</string>
	<string name="pref_shiftfkeys_title">"Shift+num are F-keys"</string>
	<string name="pref_shiftfkeys_summary">"On hardware keyboards, number keys send F1-F10 with shift"</string>
	<string name="pref_ctrlfkeys_title">"Ctrl+num are F-keys"</string>
	<string name="pref_ctrlfkeys_summary">"On software keyboards, number keys send F1-F10 with ctrl"</string>
	<string name="pref_volumefont_title">"Volume keys change font size"</string>
	<string name="pref_volumefont_summary">"Font size can also be changed in profile settings"</string>
	<string name="pref_memkeys_title">"Remember keys in memory"</string>
	<string name="pref_memkeys_summary">"Keep unlocked keys in memory until backend service is terminated"</string>
	<string name="pref_conn_persist_title">"Stay connected in the background"</string>
	<string name="pref_conn_persist_summary">"Keep your sessions open even when you switch to other apps"</string>
	<string name="pref_keymode_title">"Directory shortcuts"</string>
	<string name="pref_stickymodifiers_title">"Sticky modifiers"</string>
	<string name="pref_camera_title">"Camera shortcut"</string>
	<string name="pref_keepalive_title">"Keep screen awake"</string>
	<string name="pref_keepalive_summary">"Prevent the screen from turning off when working in a console"</string>
	<string name="pref_wifilock_title">"Keep Wi-Fi active"</string>
	<string name="pref_wifilock_summary">"Prevent Wi-Fi from turning off when a session is active"</string>
	<string name="pref_bumpyarrows_title">"Bumpy arrows"</string>
	<string name="pref_bumpyarrows_summary">"Vibrate when sending arrow keys; useful for laggy connections"</string>
	<string name="pref_bell_category">"Terminal bell"</string>
	<string name="pref_bell_title">"Audible bell"</string>
	<string name="pref_bell_volume_title">"Bell volume"</string>
	<string name="pref_bell_vibrate_title">"Vibrate on bell"</string>
	<string name="pref_bell_notification_title">"Background notifications"</string>
	<string name="pref_bell_notification_summary">"Send notification when a terminal running in the background sounds a bell."</string>
	<string name="console_menu_paste">"Paste"</string>
	<string name="image_description_toggle_control_character">Toggle control character.</string>
	<string name="image_description_send_escape_character">Send escape character.</string>
	<string name="image_description_send_tab_character">Send TAB character.</string>
	<string name="image_description_show_keyboard">Show keyboard.</string>
	<string name="image_description_up">Arrow up</string>
	<string name="image_description_down">Arrow down</string>
	<string name="image_description_left">Arrow left</string>
	<string name="image_description_right">Arrow right</string>
	<string name="button_key_esc">Esc</string>
	<string name="button_key_ctrl">Ctrl</string>
	<string name="button_key_home">Home</string>
	<string name="button_key_end">End</string>
	<string name="button_key_pgup">PgUp</string>
	<string name="button_key_pgdn">PgDn</string>
	<string name="button_key_f1">F1</string>
	<string name="button_key_f2">F2</string>
	<string name="button_key_f3">F3</string>
	<string name="button_key_f4">F4</string>
	<string name="button_key_f5">F5</string>
	<string name="button_key_f6">F6</string>
	<string name="button_key_f7">F7</string>
	<string name="button_key_f8">F8</string>
	<string name="button_key_f9">F9</string>
	<string name="button_key_f10">F10</string>
	<string name="button_key_f11">F11</string>
	<string name="button_key_f12">F12</string>
</resources>