<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * ConnectBot: simple, powerful, open-source SSH client for Android
 * Copyright 2007 Kenny Root, Jeffrey Sharkey
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<SwitchPreferenceCompat
		android:key="memkeys"
		android:title="@string/pref_memkeys_title"
		android:summary="@string/pref_memkeys_summary"
		android:defaultValue="true"
		/>

	<SwitchPreferenceCompat
		android:key="connPersist"
		android:title="@string/pref_conn_persist_title"
		android:summary="@string/pref_conn_persist_summary"
		android:defaultValue="true"
		/>

	<SwitchPreferenceCompat
		android:key="wifilock"
		android:title="@string/pref_wifilock_title"
		android:summary="@string/pref_wifilock_summary"
		android:defaultValue="true"
		/>

	<SwitchPreferenceCompat
		android:key="backupkeys"
		android:title="@string/pref_backupkeys_title"
		android:summary="@string/pref_backupkeys_summary"
		android:defaultValue="false"
		/>

	<PreferenceCategory
		android:title="@string/pref_emulation_category">

		<ListPreference
			android:key="emulation"
			android:title="@string/pref_emulation_title"
			android:summary="@string/pref_emulation_summary"
			android:entries="@array/list_emulation_modes"
			android:entryValues="@array/list_emulation_modes"
			android:defaultValue="xterm-256color"
			/>

		<EditTextPreference
			android:key="scrollback"
			android:title="@string/pref_scrollback_title"
			android:summary="@string/pref_scrollback_summary"
			android:defaultValue="140"
			android:numeric="integer"
			/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_ui_category">

		<ListPreference
			android:key="rotation"
			android:title="@string/pref_rotation_title"
			android:summary="@string/pref_rotation_summary"
			android:entries="@array/list_rotation"
			android:entryValues="@array/list_rotation_values"
			android:defaultValue="Default"
			/>

		<SwitchPreferenceCompat
			android:key="titlebarhide"
			android:title="@string/pref_titlebarhide_title"
			android:summary="@string/pref_titlebarhide_summary"
			android:defaultValue="false"
			/>

		<SwitchPreferenceCompat
			android:key="fullscreen"
			android:title="@string/pref_fullscreen_title"
			android:summary="@string/pref_fullscreen_summary"
			android:defaultValue="false"
			/>

		<SwitchPreferenceCompat
			android:key="pgupdngesture"
			android:title="@string/pref_pg_updn_gesture_title"
			android:summary="@string/pref_pg_updn_gesture_summary"
			android:defaultValue="false"
			/>

		<SwitchPreferenceCompat
			android:key="volumefont"
			android:title="@string/pref_volumefont_title"
			android:summary="@string/pref_volumefont_summary"
			android:defaultValue="true"
			/>

		<SwitchPreferenceCompat
			android:key="keepalive"
			android:title="@string/pref_keepalive_title"
			android:summary="@string/pref_keepalive_summary"
			android:defaultValue="true"
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_keyboard_category">

		<SwitchPreferenceCompat
			android:key="alwaysvisible"
			android:title="@string/pref_alwaysvisible_title"
			android:defaultValue="false"
			/>

		<SwitchPreferenceCompat
			android:key="shiftfkeys"
			android:title="@string/pref_shiftfkeys_title"
			android:summary="@string/pref_shiftfkeys_summary"
			android:defaultValue="false"
			/>

		<SwitchPreferenceCompat
			android:key="ctrlfkeys"
			android:title="@string/pref_ctrlfkeys_title"
			android:summary="@string/pref_ctrlfkeys_summary"
			android:defaultValue="false"
			/>

		<ListPreference
			android:key="stickymodifiers"
			android:title="@string/pref_stickymodifiers_title"
			android:summary="@string/pref_stickymodifiers_summary"
			android:entries="@array/list_stickymodifiers"
			android:entryValues="@array/list_stickymodifiers_values"
			android:defaultValue="no"
			/>

		<ListPreference
			android:key="keymode"
			android:title="@string/pref_keymode_title"
			android:summary="@string/pref_keymode_summary"
			android:entries="@array/list_keymode"
			android:entryValues="@array/list_keymode_values"
			android:defaultValue="none"
			/>

		<ListPreference
			android:key="camera"
			android:title="@string/pref_camera_title"
			android:summary="@string/pref_camera_summary"
			android:entries="@array/list_camera"
			android:entryValues="@array/list_camera_values"
			android:defaultValue="Ctrl+A then Space"
			/>

		<SwitchPreferenceCompat
			android:key="bumpyarrows"
			android:title="@string/pref_bumpyarrows_title"
			android:summary="@string/pref_bumpyarrows_summary"
			android:defaultValue="true"
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_bell_category">

		<SwitchPreferenceCompat
			android:key="bell"
			android:title="@string/pref_bell_title"
			android:defaultValue="true"
			/>

		<org.connectbot.util.VolumePreference
			android:key="bellVolume"
			android:title="@string/pref_bell_volume_title"
			android:dialogLayout="@layout/volume_preference_dialog_layout"
			/>

		<SwitchPreferenceCompat
			android:key="bellVibrate"
			android:title="@string/pref_bell_vibrate_title"
			android:defaultValue="true"
			/>

		<SwitchPreferenceCompat
			android:key="bellNotification"
			android:title="@string/pref_bell_notification_title"
			android:summary="@string/pref_bell_notification_summary"
			android:defaultValue="false"
			/>

	</PreferenceCategory>

</PreferenceScreen>
