<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ConnectBot: simple, powerful, open-source SSH client for Android
  ~ Copyright 2015 Kenny Root, Jeffrey Sharkey
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout android:id="@+id/keyboard_group"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_alignParentBottom="true"
	android:background="@color/key_background_layout"
	android:orientation="horizontal"
	android:padding="0dip"
	android:visibility="gone">


	<HorizontalScrollView
		android:id="@+id/keyboard_hscroll"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:padding="0dp"
		android:scrollbars="none">

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:padding="0dp">

			<Button
				android:id="@+id/button_ctrl"
				style="@style/KeyboardButton"
				android:contentDescription="@string/image_description_toggle_control_character"
				android:text="@string/button_key_ctrl"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_esc"
				style="@style/KeyboardButton"
				android:contentDescription="@string/image_description_send_escape_character"
				android:text="@string/button_key_esc"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_tab"
				style="@style/KeyboardButton"
				android:contentDescription="@string/image_description_send_tab_character"
				android:text="@string/button_key_tab"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_up"
				style="@style/KeyboardButton"
				android:contentDescription="@string/image_description_up"
				android:text="@string/button_key_up"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_down"
				style="@style/KeyboardButton"
				android:contentDescription="@string/image_description_down"
				android:text="@string/button_key_down"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_left"
				style="@style/KeyboardButton"
				android:contentDescription="@string/image_description_left"
				android:text="@string/button_key_left"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_right"
				style="@style/KeyboardButton"
				android:contentDescription="@string/image_description_right"
				android:text="@string/button_key_right"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_home"
				style="@style/KeyboardButton"
				android:text="@string/button_key_home"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_end"
				style="@style/KeyboardButton"
				android:text="@string/button_key_end"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_pgup"
				style="@style/KeyboardButton"
				android:text="@string/button_key_pgup"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_pgdn"
				style="@style/KeyboardButton"
				android:text="@string/button_key_pgdn"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_f1"
				style="@style/KeyboardButton"
				android:text="@string/button_key_f1"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_f2"
				style="@style/KeyboardButton"
				android:text="@string/button_key_f2"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_f3"
				style="@style/KeyboardButton"
				android:text="@string/button_key_f3"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_f4"
				style="@style/KeyboardButton"
				android:text="@string/button_key_f4"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_f5"
				style="@style/KeyboardButton"
				android:text="@string/button_key_f5"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_f6"
				style="@style/KeyboardButton"
				android:text="@string/button_key_f6"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_f7"
				style="@style/KeyboardButton"
				android:text="@string/button_key_f7"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_f8"
				style="@style/KeyboardButton"
				android:text="@string/button_key_f8"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_f9"
				style="@style/KeyboardButton"
				android:text="@string/button_key_f9"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_f10"
				style="@style/KeyboardButton"
				android:text="@string/button_key_f10"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_f11"
				style="@style/KeyboardButton"
				android:text="@string/button_key_f11"/>

			<View style="@style/KeyboardSeparator"/>

			<Button
				android:id="@+id/button_f12"
				style="@style/KeyboardButton"
				android:text="@string/button_key_f12"/>
		</LinearLayout>
	</HorizontalScrollView>

	<View style="@style/KeyboardSeparator"/>

	<ImageView
		android:id="@+id/button_keyboard"
		style="@style/KeyboardKey"
		android:background="#55b0b0f0"
		android:contentDescription="@string/image_description_show_keyboard"
		android:src="@drawable/button_keyboard"/>
</LinearLayout>
