<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * ConnectBot: simple, powerful, open-source SSH client for Android
 * Copyright 2007 Kenny Root, Jeffrey Sharkey
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical">

	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingEnd="10dip"
		android:paddingLeft="10dip"
		android:paddingRight="10dip"
		android:paddingStart="10dip"
		android:scrollbars="vertical">

		<TableRow>

			<TextView
				android:gravity="end|center_vertical"
				android:paddingEnd="10dip"
				android:paddingRight="10dip"
				android:text="@string/prompt_nickname"
				android:textAppearance="?android:attr/textAppearanceMedium"/>

			<EditText
				android:id="@+id/nickname"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:hint="@string/prompt_nickname_hint_pubkey"
				android:singleLine="true"/>
		</TableRow>

		<TableRow android:focusable="false">

			<TextView
				android:layout_gravity="center_vertical"
				android:gravity="bottom|end"
				android:paddingEnd="10dip"
				android:paddingRight="10dip"
				android:text="@string/prompt_type"
				android:textAppearance="?android:attr/textAppearanceMedium"/>

			<RadioGroup
				android:id="@+id/key_type"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checkedButton="@+id/rsa"
				android:orientation="vertical">

				<RadioButton
					android:id="@+id/rsa"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingEnd="3dip"
					android:paddingRight="3dip"
					android:text="RSA"/>

				<RadioButton
					android:id="@+id/dsa"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingEnd="3dip"
					android:paddingRight="3dip"
					android:text="DSA"/>

				<RadioButton
					android:id="@+id/ec"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="EC"/>

				<RadioButton
					android:id="@+id/ed25519"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Ed25519"/>
			</RadioGroup>
		</TableRow>

		<TableRow>

			<TextView
				android:gravity="end|center_vertical"
				android:paddingEnd="10dip"
				android:paddingRight="10dip"
				android:text="@string/prompt_bits"
				android:textAppearance="?android:attr/textAppearanceMedium"/>

			<EditText
				android:id="@+id/bits"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:inputType="number"
				android:singleLine="true"
				android:text="1024"/>
		</TableRow>

		<SeekBar
			android:id="@+id/bits_slider"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:max="3328"
			android:paddingBottom="10dip"
			android:progress="2048"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="start"
			android:text="@string/prompt_password_can_be_blank"/>

		<TableRow>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="end|center_vertical"
				android:paddingEnd="10dip"
				android:paddingRight="10dip"
				android:text="@string/prompt_password"
				android:textAppearance="?android:attr/textAppearanceMedium"/>

			<EditText
				android:id="@+id/password1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:inputType="textPassword"
				android:singleLine="true"/>
		</TableRow>

		<TableRow android:paddingBottom="6dip">

			<LinearLayout
				android:gravity="end|center_vertical"
				android:orientation="vertical"
				android:paddingEnd="10dip"
				android:paddingRight="10dip">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="end|bottom"
					android:text="@string/prompt_password"
					android:textAppearance="?android:attr/textAppearanceMedium"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="end|top"
					android:text="@string/prompt_again"
					android:textAppearance="?android:attr/textAppearanceSmall"/>
			</LinearLayout>

			<EditText
				android:id="@+id/password2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:inputType="textPassword"
				android:singleLine="true"/>
		</TableRow>

		<CheckBox
			android:id="@+id/unlock_at_startup"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pubkey_load_on_start"/>

		<CheckBox
			android:id="@+id/confirm_use"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pubkey_confirm_use"/>

		<Button
			android:id="@+id/save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dip"
			android:enabled="false"
			android:text="@string/pubkey_generate"/>
	</TableLayout>
</ScrollView>
