<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * ConnectBot: simple, powerful, open-source SSH client for Android
 * Copyright 2007 Kenny Root, Jeffrey Sharkey
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_weight="1"
	>

	<LinearLayout
		android:id="@+id/topics"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		>

		<TextView
			android:id="@+id/version"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:paddingStart="2dip"
			android:paddingEnd="2dip"
			android:paddingRight="2dip"
			android:paddingTop="2dip"
			android:text="ConnectBot (working version)"
			android:textAppearance="?android:attr/textAppearanceSmall"
			tools:ignore="HardcodedText"
			/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:paddingTop="2dip"
			android:text="@string/help_intro"
			android:textAppearance="?android:attr/textAppearanceMedium"
			/>

		<Button
			android:id="@+id/hints_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/hints"/>

		<Button
			android:id="@+id/shortcuts_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/keyboard_shortcuts"/>

		<Button
			android:id="@+id/eula_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/terms_and_conditions"/>

	</LinearLayout>
</ScrollView>
